z-index fix on menu

--- a/src/assets/css/modules/_nav.sass
+++ b/src/assets/css/modules/_nav.sass
@@ -93,6 +93,7 @@ $bp-nav-full: rem(900)
     left: 0
     right: auto
     white-space: nowrap
+    z-index: 1
 
   @include bp($bp-nav-full)
     right: 0
